[package]
name = "pathrouter"
version = "0.1.0-beta.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/pathrouter"
homepage = "https://github.com/zzzdong/pathrouter"
documentation = "https://docs.rs/pathrouter/"
description = """
a simple router library
"""
keywords = ["router"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
